app/styles/layout.styl
@import _variables

// Disable navigation icons
.nav
  i.fa
    display none

// No navbar marging
.header
  .navbar
    margin 0

// Animate view changes on standalone mode
// VERY DIRTY HACK
.standalone
  #wrap
    position absolute
    top 0
    left 0
    right 0
    bottom 0

    &.ng-leave, &.ng-enter
      .animated-view
        position absolute
        top 0
        left 0
        right 0
        bottom 0

    &.ng-leave
      -webkit-animation: 0.5s empty
      -moz-animation: 0.5s empty
      -o-animation: 0.5s empty
      animation: 0.5s empty
      .animated-view
        -webkit-animation: 0.5s slideOutRight
        -moz-animation: 0.5s slideOutRight
        -o-animation: 0.5s slideOutRight
        animation: 0.5s slideOutRight

    &.ng-enter
      -webkit-animation: 0.5s empty
      -moz-animation: 0.5s empty
      -o-animation: 0.5s empty
      animation: 0.5s empty
      .animated-view
        -webkit-animation: 0.5s slideInLeft
        -moz-animation: 0.5s slideInLeft
        -o-animation: 0.5s slideInLeft
        animation: 0.5s slideInLeft


@media $screen-tablet-media-q
  .header
    .navbar
      height $navbar-height + 2
      margin 0

    .navbar-form
      display none

    .navbar-header
      float left
      margin-right 0.3em
      .navbar-brand
        background-color $navbar-default-link-active-bg
        span
          display none
        &:after
          content "ST"

    .navbar-right
      float left !important

    .nav
      margin 0
      position absolute
      left 55px
      right 0
      i.fa
        display block
        line-height 1.2em
        font-size 2.4em
      li
        text-align center
        float left
        width 33.3333333%
        a
          margin 0
          padding 0.7em 0.5em
          background none !important
          font-size 0.7em
          line-height 1.3em

        &.active
          a
            color $theme-color !important
          i.fa
            color $theme-color

